fix(orders): More info, reformat for readability

--- a/app/Themes/Rcac/views/mail/html/themes/default.css
+++ b/app/Themes/Rcac/views/mail/html/themes/default.css
@@ -274,23 +274,36 @@ table caption {
 .table th {
     margin: 0;
     padding: 5px;
-    text-align: left;
     border: 1px solid #eee;
     vertical-align: top;
     background-color: #f5f5f5;
     border-bottom: 2px solid #eee;
     font-size: 13px;
+    line-height: 1.4;
+    text-align: left;
 }
 .content-cell td,
 .table td {
     color: #74787e;
     font-size: 13px;
-    line-height: 1.2;
+    line-height: 1.4;
     margin: 0;
     padding: 5px;
     border: 1px solid #eee;
     vertical-align: top;
     text-align: left;
+}
+.content-cell th[align=center],
+.table th[align=center],
+.content-cell td[align=center],
+.table td[align=center] {
+    text-align: center;
+}
+.content-cell th[align=right],
+.table th[align=right],
+.content-cell td[align=right],
+.table td[align=right] {
+    text-align: right;
 }
 .content-cell caption,
 .table caption {
